Fixed survey participants styñes

--- a/src/app/bmx/components/participants-email/participants-email.component.html
+++ b/src/app/bmx/components/participants-email/participants-email.component.html
@@ -1,8 +1,8 @@
 <div class="container" style="display: flex; gap: 5%;max-width: 100%;">
-    <div class="email-container" style="width: 100% !important;">
+    <div class="email-container" style="width: 100% ">
         <h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
         <!-- HEADER INPUTS -->
-        <div style="display: flex;flex-direction: row;justify-content: space-evenly;">
+        <div class="header" style="display: flex;flex-direction: row;justify-content: space-evenly;">
 
             <div>
                 <div style="margin: 23px 20px;font-size: 20px;color:#063074;font-weight: 800;">Email Settings</div>
@@ -27,7 +27,7 @@
             <div style="display: flex;flex-direction: column;">
                 <div style="display: flex;flex-direction: row;justify-content: space-evenly;">
 
-                    <div style="display: flex;justify-content: space-around;">
+                    <div class="options" style="display: flex;justify-content: space-around;">
                         <div>
                             <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Templates</div>
                             <mat-form-field appearance="outline" style="margin-left: 20px;">
@@ -61,7 +61,7 @@
         </div>
 
         <!-- EMAIL EDITOR FORM -->
-        <div style="margin-left: 20px;">
+        <div class="invite" style="margin-left: 20px;">
             <div style="margin-bottom: 20px;font-size: 20px;color:#063074;font-weight: 800;">SEND INVITE</div>
             <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between; ">
                 <div style="color:#063074;font-size: 20px;margin-right: 20px;">FROM:</div>
@@ -129,7 +129,7 @@
 
     </div>
     <div class="participants-container" style="    position: relative;
-    top: 8vh; width: 40% !important;
+    top: 8vh; 
 ">
         <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between; ">
             <div style="color:#063074;font-size: 20px;margin-right: 20px;font-weight: 800;">To :</div>
