--- a/src/app/bmx/components/participants-email/participants-email.component.scss
+++ b/src/app/bmx/components/participants-email/participants-email.component.scss
@@ -1,50 +1,45 @@
-// .container {
-//     width: 100%;
-//     display: flex;
-//     align-items: flex-start;
-// }
+@media (max-width: 1720px) {
 
-// .email-container {
-//     border: hotpink solid 0px;
-//     width: 60%;
-// }
+    // .container {
+    //     display: flex;
+    //     width: 100%;
+    //     flex-direction: column;
+    //     justify-content: space-between;
+    // }
+    .options {
+        display: flex;
+        flex-direction: column !important;
+    }
 
-// .participants-container {
-//     border: hotpink solid 0px;
-//     width: 35%;
-//     padding: 7% 0px 0px 22px;
-//     margin-left: 45px;
-// }
-// .mat-checkbox-inner-container-no-side-margin {
-//     margin-top: 9px;
-// }
+    .email-container {
+        width: 40% !important;
+    }
 
-// ::ng-deep label{
-//     margin-top: 9px;
-// }
 
-// @media screen and(max-width: 1203px) {
-//     .container {
-//         display: flex;
-//         flex-direction: column-reverse;
-//         align-items: center;
-//         width: 80%;
-//         margin-left: 20px;
-//     }
+}
 
-//     .email-container {
-//         width: 120%;
-//     }
 
-//     .participants-container {
-//         width: 100%;
-//         margin: 0px;
-//         padding-left: 0px;
-//     }
-// }
+@media (max-width: 1720px) {
 
-// tr.mat-row,
-// tr.mat-footer-row {
-//     height: 30px;
-// }
+    // .container {
+    //     display: flex;
+    //     width: 100%;
+    //     flex-direction: column;
+    //     justify-content: space-between;
+    // }
+    .options {
+        display: flex;
+        flex-direction: column !important;
+    }
+
+    .email-container {
+        width: -webkit-fill-available !important;
+    }
+    .invite{
+        width: 95%;
+    }
+}
+
+
+
 
