Fixed survey participants styñes

--- a/src/app/bmx/components/participants-email/participants-email.component.html
+++ b/src/app/bmx/components/participants-email/participants-email.component.html
@@ -1,8 +1,8 @@
-<div class="container" style="display: flex; gap: 5%;max-width: 100%;">
+<div class="container" style="display: flex; gap: 5%;max-width: 100%;     padding: 0;">
     <div class="email-container" style="width: 100% ">
         <h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
         <!-- HEADER INPUTS -->
-        <div class="header" style="display: flex;flex-direction: row;justify-content: space-evenly;">
+        <div class="header" style="display: flex;flex-direction: row;justify-content: space-between;">
 
             <div>
                 <div style="margin: 23px 20px;font-size: 20px;color:#063074;font-weight: 800;">Email Settings</div>
