--- a/src/app/bmx/components/project-list/project-list.component.html
+++ b/src/app/bmx/components/project-list/project-list.component.html
@@ -1,5 +1,5 @@
 <div style="width: 100%; display: flex; align-items: flex-start;">
-    <div style="width: 75%;">
+    <div >
         <div style="display: flex;justify-content: space-between; margin-top: 20px;">
             <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">MATRIX LIST</div>
             <mat-form-field style="float:right; padding-right: 20px" appearance="outline">
