--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@ app-survey-creation-design {
     /* Estilos específicos para app-survey-creation-design */
     width: 100%;
 }
+
+app-dashboard{
+    width: 76%;
+}
