Fix radio buttons

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -361,7 +361,7 @@
                             <!-- <input type="checkbox" [checked]="allComplete" -->
                             <input type="radio"
                                 [checked]="(testName['RATE'] && testName['RATE'] == checkBoxName )?true:allComplete"
-                                (change)="saveMultipleChoice(checkBoxName, y,  $event)">
+                                (click)="saveMultipleChoice(checkBoxName, y,  $event)">
                         </div>
                         </div>
                         <div
