--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -120,9 +120,7 @@
                 <span style="    display: flex;
                 justify-content: space-between;
                 align-items: center;">
-                  {{template.displayName}} <mat-icon  class="edit-icon"
-                    style="z-index: 1001;" (click)="openModal(); selectedTemplateName = template.templateName; templateName = template.templateName">edit
-                  </mat-icon>
+                  {{template.displayName}} 
                 </span>
 
               </mat-option>
