Fix radio buttons

--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -119,7 +119,8 @@
                 style="display: flex; justify-content: space-between">
                 <span style="    display: flex;
                 justify-content: space-between;
-                align-items: center;">
+                align-items: center;
+                font-size: 0.9rem;">
                   {{template.displayName}} 
                 </span>
 
