--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -348,8 +348,9 @@
                                 <label for="">{{checkBoxName}}</label>
                                 <!-- <input type="checkbox" [checked]="allComplete" -->
                                 <input type="checkbox"
-                                    [checked]="(testName['multipleChoice'] && testName['multipleChoice'].includes(checkBoxName))?true:allComplete"
-                                    (change)="saveMultipleChoice(checkBoxName, y,  $event)">
+                                [checked]="(testName['RATE'] && veryfy(testName['RATE'],checkBoxName))?true:allComplete"
+                                (change)="saveMultipleChoice(checkBoxName, y,  $event)">
+                            
                             </div>
                         </div>
 
