--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -92,9 +92,9 @@
 }
 
 .pageNumberActive {
-  min-width: 40px;
-  color: white;
-  background-color: #ee7f24;
+  min-width: 40px !important;
+  color: white !important;
+  background-color: #ee7f24 !important;
 }
 
 .pageNumber {
