--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -351,15 +351,24 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
     <!-- BUTTON-->
     <div class="sm-row-box-rkScale">
-        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
+      <div class="button-cancel" style=" display: flex;
+  flex-direction: column;
+  align-items: center; ">
+        <button style="outline: none;color:#d35854;" mat-icon-button (click)="selectedIndex = ''"
             aria-label="ranking">
-            <mat-icon>cancel</mat-icon><br>Cancel
+            <mat-icon>cancel</mat-icon>
         </button>
-        <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
+        <p style="margin-top: -11; color: #D35854; font-size: 21px;">Cancel</p>
+      </div>
+
+      <div class="button-Done"style="display: flex; flex-direction: column; align-items: center;">
+        <button style="outline: none;color:#76d354;" mat-icon-button
             (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
             aria-label="ranking">
-            <mat-icon>check_circle</mat-icon><br> Done
+            <mat-icon>check_circle</mat-icon>
         </button>
+        <p style="margin-top: -1; color: #76D354; font-size: 21px;">Done</p>
+    </div>
     </div>
 </div>
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
