--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -121,7 +121,7 @@
                 justify-content: space-between;
                 align-items: center;
                 font-size: 0.9rem;">
-                  {{template.displayName}} 
+                  {{template.displayName}}
                 </span>
 
               </mat-option>
@@ -172,7 +172,7 @@
 
   <div style="display: flex; flex-direction: row;flex-wrap: wrap;justify-content: space-between;margin: 10px 39px;">
     <div *ngFor="let director of DIRECTORS; let i = index; trackBy: trackByIndex">
-      <mat-card appearance="outlined" class="directorCard" style="margin:20px 0px;width: 400px; gap: 5px;">
+      <mat-card appearance="outlined" class="directorCard" style="width: 400px;gap: 5px;padding: 10px;margin: 10px;">
 
         <div style="display: flex;flex-direction: row;">
           <div style="margin-right: 19px; color: #324395;" class="selectLabels">Name: </div>
