--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -44,7 +44,7 @@
           Welcome {{userFullName}}
           <br>
           Role: {{userRole}} <span style="font-size: 10px;">{{versionNumber}}</span>
-          <app-signal></app-signal>
+          <!-- <app-signal></app-signal> -->
         </div>
       </div>
     </div>
